--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-Hello world
-My Name is NATHAN
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {background-color:lightgrey}
+h1   {color:blue}
+p    {color:green}
+</style>
+</head>
+<body>
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
+
+
