index.html starting to show some layout

--- a/index.html
+++ b/index.html
@@ -2,15 +2,55 @@
 <html>
 <head>
 <style>
-body {background-color:lightgrey}
-h1   {color:blue}
-p    {color:green}
+#header {
+	background-color:grey;
+	color: white;
+	test-align:center;
+	padding:5px;
+	}
+#nav	{
+	line-height:30px;
+	background-color:Aqua
+	height:300px;
+	width:100px:
+	float: left;
+	padding:5px;
+	color: RoyalBlue;
+	}
+#section {
+	 width:350px;
+	 float:left;
+	 padding:10px;
+	 }
+#footer	{
+	background-color:grey;
+	color: white;
+	test-align:center;
+	padding:5px;
+ 	clear:both;
+	}
 </style>
 </head>
 <body>
+<div id="header">
+<h1>Walk into my Life</h1>
+</div>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<div id="nav">
+Hobbies<br>
+Projects<br>
+Resume Attachment<br>
+</div>
+
+<div id="section">
+<h2>Nathan Pitchaikani</h2>
+<p> I am a undergraduate student at University of Illinois at  Urbana-Champaign in the Engineering department studying Computer Science.
+</p>
+</div>
+
+<div id="footer">
+Last Modified May 19, 2015
+</div>
 
 </body>
 </html>
