--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 #header {
 	background-color:grey;
 	color: white;
-	test-align:center;
+	text-align:center;
 	padding:5px;
 	}
 #nav	{
@@ -19,13 +19,16 @@
 	}
 #section {
 	 width:350px;
+	 height:10000px;
 	 float:left;
+	 background-color:Gainsboro;
+	 color:black;
 	 padding:10px;
 	 }
 #footer	{
 	background-color:grey;
 	color: white;
-	test-align:center;
+	text-align:center;
 	padding:5px;
  	clear:both;
 	}
@@ -49,7 +52,7 @@ Resume Attachment<br>
 </div>
 
 <div id="footer">
-Last Modified May 19, 2015
+Last Modified: May 19, 2015
 </div>
 
 </body>
